--- a/package.json
+++ b/package.json
@@ -3,18 +3,23 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@babel/core": "^7.0.0",
+    "@babel/runtime": "^7.0.0",
     "axios": "^0.18.0",
     "babel-loader": "8.0.4",
     "bootstrap": "^4.3.1",
     "jquery": "^3.4.1",
-    "popper.js": "^1.15.0",
+    "moment": "^2.18.1",
+    "popper.js": "1.14.7",
     "react": "^16.8.1",
+    "react-date-range": "^0.9.4",
+    "react-dates": "^21.0.1",
     "react-dom": "^16.8.1",
-    "react-dropzone": "^10.1.8",
     "react-input-mask": "^2.0.4",
     "react-input-range": "^1.3.0",
     "react-router-dom": "^4.3.1",
     "react-scripts": "2.1.3",
+    "react-with-direction": "^1.3.1",
     "socket.io-client": "^2.2.0"
   },
   "scripts": {
