--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "frontend",
   "version": "0.1.0",
   "private": true,
+  "main": "index.js",
   "dependencies": {
     "@babel/core": "^7.0.0",
     "@babel/runtime": "^7.0.0",
@@ -11,7 +12,9 @@
     "jquery": "^3.4.1",
     "moment": "^2.18.1",
     "popper.js": "1.14.7",
+    "rc-rate": "^2.5.0",
     "react": "^16.8.1",
+    "react-currency-format": "^1.0.0",
     "react-date-range": "^0.9.4",
     "react-dates": "^21.0.1",
     "react-dom": "^16.8.1",
@@ -20,7 +23,8 @@
     "react-router-dom": "^4.3.1",
     "react-scripts": "2.1.3",
     "react-with-direction": "^1.3.1",
-    "socket.io-client": "^2.2.0"
+    "socket.io-client": "^2.2.0",
+    "tabler-react": "^2.0.0-alpha.1"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -36,5 +40,8 @@
     "not dead",
     "not ie <= 11",
     "not op_mini all"
-  ]
+  ],
+  "devDependencies": {
+    "webpack-cli": "^3.3.9"
+  }
 }
