--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "axios": "^0.18.0",
     "babel-loader": "8.0.4",
     "bootstrap": "^4.3.1",
+    "google-maps-react": "^2.0.2",
     "jquery": "^3.4.1",
     "moment": "^2.18.1",
     "popper.js": "1.14.7",
@@ -18,6 +19,7 @@
     "react-date-range": "^0.9.4",
     "react-dates": "^21.0.1",
     "react-dom": "^16.8.1",
+    "react-draggable-tags": "^0.4.0",
     "react-input-mask": "^2.0.4",
     "react-input-range": "^1.3.0",
     "react-router-dom": "^4.3.1",
