--- a/package.json
+++ b/package.json
@@ -22,9 +22,10 @@
     "react-draggable-tags": "^0.4.0",
     "react-input-mask": "^2.0.4",
     "react-input-range": "^1.3.0",
+    "react-native-web": "^0.11.7",
     "react-router-dom": "^4.3.1",
+    "react-schedule-calendar": "^0.22.8",
     "react-scripts": "2.1.3",
-    "react-with-direction": "^1.3.1",
     "socket.io-client": "^2.2.0",
     "tabler-react": "^2.0.0-alpha.1"
   },
