--- a/package.json
+++ b/package.json
@@ -26,12 +26,10 @@
     "react-input-mask": "^2.0.4",
     "react-input-range": "^1.3.0",
     "react-native-web": "^0.11.7",
-    "react-redux": "^7.1.3",
-    "react-redux-toastr": "^7.6.1",
     "react-router-dom": "^4.3.1",
     "react-schedule-calendar": "^0.22.8",
     "react-scripts": "2.1.3",
-    "redux": "^4.0.4",
+    "react-toastify": "^5.4.0",
     "socket.io-client": "^2.2.0",
     "tabler-react": "^2.0.0-alpha.1"
   },
