--- a/package.json
+++ b/package.json
@@ -8,7 +8,9 @@
     "@babel/runtime": "^7.0.0",
     "@fullcalendar/core": "^4.3.1",
     "@fullcalendar/daygrid": "^4.3.0",
+    "@fullcalendar/interaction": "^4.3.0",
     "@fullcalendar/react": "^4.3.0",
+    "@wojtekmaj/react-timerange-picker": "^2.3.0",
     "axios": "^0.18.0",
     "babel-loader": "8.0.4",
     "bootstrap": "^4.3.1",
