cartao de perfil

--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "popper.js": "1.14.7",
     "rc-rate": "^2.5.0",
     "react": "^16.8.1",
+    "react-clickable": "^1.1.0",
     "react-currency-format": "^1.0.0",
     "react-date-range": "^0.9.4",
     "react-dates": "^21.0.1",
