--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "accounting-js": "^1.1.1",
     "axios": "^0.18.0",
     "babel-loader": "8.0.4",
+    "balloon-css": "^1.0.3",
     "bootstrap": "^4.3.1",
     "google-maps-react": "^2.0.2",
     "jquery": "^3.4.1",
