--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "react-schedule-calendar": "^0.22.8",
     "react-scripts": "2.1.3",
     "react-toastify": "^5.4.0",
+    "slick-carousel": "^1.8.1",
     "socket.io-client": "^2.2.0",
     "tabler-react": "^2.0.0-alpha.1"
   },
