--- a/package.json
+++ b/package.json
@@ -14,9 +14,12 @@
     "accounting-js": "^1.1.1",
     "axios": "^0.18.0",
     "babel-loader": "8.0.4",
+    "babel-preset-expo": "^7.1.0",
     "balloon-css": "^1.0.3",
     "bootstrap": "^4.3.1",
+    "expo": "^35.0.1",
     "google-maps-react": "^2.0.2",
+    "jest-expo": "^35.0.0",
     "jquery": "^3.4.1",
     "moment": "^2.18.1",
     "popper.js": "1.14.7",
