--- a/package.json
+++ b/package.json
@@ -42,8 +42,7 @@
     "slick-carousel": "^1.8.1",
     "socket.io-client": "^2.2.0",
     "sweetalert2": "^9.4.1",
-    "tabler-react": "^2.0.0-alpha.1",
-    "xml2js": "^0.4.22"
+    "tabler-react": "^2.0.0-alpha.1"
   },
   "scripts": {
     "start": "react-scripts start",
