--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "react-dates": "^21.0.1",
     "react-dom": "^16.8.1",
     "react-draggable-tags": "^0.4.0",
+    "react-input-enhancements": "^0.7.5",
     "react-input-mask": "^2.0.4",
     "react-input-range": "^1.3.0",
     "react-native-web": "^0.11.7",
